k8s/helloworld-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: helloworld-go
  labels:
    app: helloworld-go
spec:
  containers:
    - name: helloworld-go
      image: k3d-registry:36091/helloworld-go:v0.1
      ports:
        - containerPort: 8000
