k8s/helloworld-root-user.yaml
apiVersion: v1
kind: Pod
metadata:
  name: helloworld-root-user
  labels:
    app: helloworld-root-user
spec:
  securityContext:
    runAsUser: 0
  containers:
    - name: helloworld-go
      image: k3d-registry:36091/helloworld-go:v0.1
      ports:
        - containerPort: 8000
