k8s/helloworld.yaml
apiVersion: v1
kind: Pod
metadata:
  name: helloworld
  labels:
    app: helloworld
spec:
  containers:
    - name: helloworld-go
      image: k3d-registry:36091/helloworld-go:v0.1
      ports:
        - containerPort: 8000
