k8s/k8srequiredlabels.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlabels
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabels
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          type: object
          properties:
            label:
              type: string

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredlabels                                           

        violation[{"msg": msg }] {                                                                 
            input.review.kind.kind == "Pod"                                        
            image := input.review.object.spec.containers[_].image                  
            startswith(image, "k3d-registry")                                     
            msg := sprintf("image '%v' comes from untrusted registry", [image])     
        }
